# NJRealtor-Scrapper

./: .gitignore  Dockerfile  Dockerfile.debug  NJRParser.py  NJRScrapper.py  docker-compose.yaml  requirements.txt
dags/: njrscrapper_pipeline.py
jobs/: Dockerfile  kafka_connection.py  kafka_topics.py  latest_data_avail.py  ncjar_consume_data.py  ncjar_scrape_data.py  requirements.txt
ncjar_core/: pyproject.toml
ncjar_core/ncjar/: NJRParser.py  NJRScrapper.py  utility_func.py
plugins/: NJRParser.py  NJRScrapper.py  utility_func.py
